--- a/_config.yml
+++ b/_config.yml
@@ -252,7 +252,7 @@ defaults:
     values:
       layout: single
       author_profile: false
-      comments: true
+      share: true
   # _pets
   - scope:
       path: ""
