--- a/_config.yml
+++ b/_config.yml
@@ -253,6 +253,7 @@ defaults:
       layout: single
       author_profile: false
       share: true
+      comments: true
   # _pets
   - scope:
       path: ""
